# doitip

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
doitip/: __main__.py  doira.py
doitoy/: __main__.py  doira.py  model.py
tests/: test_parse.py
