[tool.poetry]
name = "doitip"
version = "0.1.0"
description = "doitip is a python tool for exploring DOIs"
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.6"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[tool.poetry.scripts]
doi = "doitip.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
