# Update version with a command like:
# uvx --from=toml-cli toml set --toml-path=pyproject.toml project.version 0.2.0
[project]
name = "doitip"
version = "0.2.0"
description = "doitip is a python tool for exploring DOIs"
authors = [{ name = "datadavev", email = "605409+datadavev@users.noreply.github.com" }]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.6",
    "requests>=2.31.0",
    "requests-toolbelt>=1.0.0",
]

[project.scripts]
doi = "doitip.__main__:main"

[dependency-groups]
dev = [
    "pytest>=7.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
